re#1392 fixed help page margins on mobile

--- a/skin/frontend/modago/default/sass/layout/style/_help.scss
+++ b/skin/frontend/modago/default/sass/layout/style/_help.scss
@@ -19,11 +19,11 @@
 			@media(max-width: $screen-xs-max) {
 				&:first-child {
 					padding-left: 0;
-					padding-right: 3px;
+					padding-right: 2px;
 				}
 				&:last-child {
-					padding-left: 0;
-					padding-right: 3px;
+					padding-left: 2px;
+					padding-right: 0;
 				}
 			}
 			.help-tile-container {
